--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20221014133804">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221014161315">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,11 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container-big">
-				<a href="./index.html" class="header__logo"><img src="img/header-logo.svg" alt="logo site"></a>
+				<a href="./index.html" class="header__logo">FarmVest</a>
+				<div class="page__action">
+					<button type="button" class="page__theme"></button>
+					<button type="button" class="page__reset"></button>
+				</div>
 				<div class="header__menu menu">
 					<nav class="menu__body">
 						<ul class="menu__list">
@@ -171,9 +175,10 @@
 											<h3 class="list-works__titel">
 												Start Investing
 											</h3>
-											<p class="list-works__text"></p>
-											Start by downloading FarmVest app
-											on your Android or IOS
+											<p class="list-works__text">
+												Start by downloading FarmVest app
+												on your Android or IOS
+											</p>
 										</div>
 									</li>
 								</ul>
@@ -490,7 +495,7 @@
 			</p>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20221014133804"></script>
+	<script src="js/app.min.js?_v=20221014161315"></script>
 </body>
 
 </html>
